@@ -5,8 +5,8 @@ copyright_holder = Steve Dondley
 copyright_year   = 2018
 
 [Repository]
-[Bugtracker]
-web = http://github.com/sdondley/%s/issues
+;[Bugtracker]
+;web = http://github.com/sdondley/%s/issues
 [Git::NextVersion]
 [GitHub::Meta]
 [PodVersion]
@@ -35,7 +35,7 @@ run = mv tmp/Changes Changes
 
 [GatherDir]
 [Prereqs]
-Markdent = 0;
+Markdent = 0
 [AutoPrereqs]
 [PruneCruft]
 [PruneFiles]
@@ -45,6 +45,7 @@ filename = README.mkdn
 filename = .gitignore
 [ManifestSkip]
 [MetaYAML]
+[MetaJSON]
 [License]
 [Readme]
 [ExtraTests]
@@ -53,4 +54,6 @@ filename = .gitignore
 [MakeMaker]
 [Manifest]
 [TestRelease]
-[FakeRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+;[FakeRelease]
